# primer

./: authorization.cpp  authorization.h  authorization.ui  functionClient.cpp  functionClient.h  main.cpp  mainwindow.h  mainwindow.ui  singleton_client.cpp  task1_caesar.cpp  task1_caesar.ui
client/: CMakeLists.txt  mainwindow.cpp  singleton_client.h  task1_caesar.h
